--- a/pug/articles/_article-04.pug
+++ b/pug/articles/_article-04.pug
@@ -1,10 +1,13 @@
 article(id=ID, class=articleClass).article
 	.card
-		.content-title
-			.article-title.content-titlebox
-				h3 День металлурга 2
-		.article-imgwrap
-			.article-imgbox.article-imgbox_full(style='background-image: url(img/news-twothirds-img-01.jpg);')
+		.article-text
+			p
+				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке
+			p
+				| «Основной итог десятилетней работы ЛПК - возможность производить трубные марки стали самого ответственного назначения в самые короткие сроки. Сегодня по производственным показателям ЛПК является лучшим среди предприятий аналогичного класса в мире. Мы не стоим на месте, планируем увеличить объем производства на 20%, до 1,5 млн тонн проката в год, осваиваем новые марки стали, которые востребованы отечественной топливно-энергетической отраслью», - отметил председатель Совета директоров ОМК Анатолий Седых.
+		.article-quote
+			blockquote.article-blockquote
+				| «Металлургия – базовая отрасль промышленности, одна из основных. Не развивая производство продукции из стали, не развивая производство листа, труб, колес для железнодорожных вагонов мы будем не конкурентоспособны. Такие предприятия, где используются современные технологии и оборудование, где оптимизированы все бизнес-процессы, где активно применяются цифровые технологии, позволяют развивать всю нашу промышленность. ВМЗ выпускает конкурентоспособную продукцию, аналогов которой в мире не так много. Можно только пожелать успехов предприятию, порадоваться за регион. Что еще важно: предприятие выполняет социальные обязательства, развивая территории, на которых оно работает», - отметил после посещения ВМЗ заместитель министра промышленности и торговли России Виктор Евтухов.
 		.article-text
 			p
 				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке
@@ -13,14 +16,11 @@ article(id=ID, class=articleClass).article
 			p
 				| «Основной итог десятилетней работы ЛПК - возможность производить трубные марки стали самого ответственного назначения в самые короткие сроки. Сегодня по производственным показателям ЛПК является лучшим среди предприятий аналогичного класса в мире. Мы не стоим на месте, планируем увеличить объем производства на 20%, до 1,5 млн тонн проката в год, осваиваем новые марки стали, которые востребованы отечественной топливно-энергетической отраслью», - отметил председатель Совета директоров ОМК Анатолий Седых.
 		.article-imgwrap
-			.article-imgbox.article-imgbox_half(style='background-image: url(img/article-img-02.jpg)')
-			.article-imgbox.article-imgbox_half(style='background-image: url(img/article-img-04.jpg)')
+			.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-02.jpg)')
+			.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-03.jpg)')
+			.article-imgbox.article-imgbox_third(style='background-image: url(img/article-img-04.jpg)')
 		.article-text
 			h3 СПРАВКА
 			p
 				| Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.
 			p Сегодня в комплексе работает около 1200 сотрудников.
-		.article-autor
-			each item in ['#статья','#событие2019','#фамилия','#справочное_слово']
-				a.hashtag(href='#')= item
-			p Автор статьи: Елена Мацинова
