--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -1,5 +1,5 @@
 block vars
-- var version = '?0.2.1';
+- var version = '?0.2.3';
 - var pageTitle;
 doctype html
 html(lang='ru')
@@ -37,6 +37,7 @@ html(lang='ru')
 								- var pageTitle = '';
 								- var ID = '';
 								- var signTitle = '';
+		footer.footer
 		.upp
 			.container
 				.row
