--- a/pug/index.pug
+++ b/pug/index.pug
@@ -20,11 +20,12 @@ block content
 	include cards/_cards-two-thirds_right
 
 	include cards/_card-full_imgfullheight
+
 	.card.cardTwoThirds
 		.card-wrap.cardTwoThirds-wrap
 			.cardTwoThirds__imgbox.card__imgbox(style='background-image: url(img/news-twothirds-img-01.jpg);')
-				.card-warning-text
-					p Что-то пошло не так
+				.card-succes-text
+					p Оценка "Хорошо!"
 			.card__content.cardTwoThirds__content
 				.tagbox
 					.tag
@@ -90,8 +91,8 @@ block content
 	.card.cardHalf
 		.card-wrap.cardHalf-wrap
 			.cardHalf-imgbox.card__imgbox(style='background-image: url(img/news-half-img-01.jpg);')
-				.card-warning-text
-					p Всё изменится!
+				.card-average-text
+					p Оценка: Нормально!
 			.card__content.cardHalf__content
 				.tagbox
 					.tag
