--- a/pug/modules/_form.pug
+++ b/pug/modules/_form.pug
@@ -28,7 +28,7 @@
 					span Подразделение
 				input#formDepartment.form__input(type="text", placeholder="Введите наименование подразделения")
 
-			.form__box
+			.form__box.form__box_small
 				label.form-label(for="formEmail")
 					span Email
 				input#formEmail.form__input(type="email", placeholder="Введите ваш Email")
