--- a/pug/post.pug
+++ b/pug/post.pug
@@ -176,7 +176,7 @@ block content
 							| Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!
 					.comment__link
 						button.comment__reply Ответить
-		#commentFormbox
+		#commentFormbox.comment-form-inn.colapse.show
 			.comment.comment_special
 				.article-autor
 					p.article-autor__left Оставить комментарий:
