--- a/css/style.css
+++ b/css/style.css
@@ -1394,6 +1394,7 @@ h2 span,
 
 .form__group {
   margin-bottom: 10px;
+  max-width: 470px;
 }
 
 .form__box {
@@ -1421,6 +1422,10 @@ h2 span,
   display: -ms-flexbox;
   display: flex;
   vertical-align: middle;
+}
+
+.form__box_small {
+  max-width: 270px;
 }
 
 .form-slide-input {
@@ -3008,6 +3013,7 @@ h2 span,
 .content-titlebox {
   float: left;
   color: #5e6167;
+  margin-bottom: 5px;
 }
 
 .content-titlebox h1,
@@ -3153,6 +3159,39 @@ h2 span,
 }
 
 .content-subtitle span {
+  color: #bcbdc0;
+}
+
+.content-text {
+  font-size: 16px;
+  color: #5e6167;
+  font-weight: 400;
+}
+
+.content-text h2 {
+  font-size: 1.5em;
+  font-family: Roboto;
+  font-weight: inherit;
+}
+
+.content-text h3 {
+  margin-bottom: 15px;
+  font-size: 1.375em;
+  font-family: Roboto;
+  font-weight: inherit;
+}
+
+.content-text h3 .small {
+  display: block;
+  font-size: 0.7728em;
+}
+
+.content-text p {
+  font-size: 1.0625em;
+  margin-bottom: 5px;
+}
+
+.content-text p .light {
   color: #bcbdc0;
 }
 
@@ -3427,6 +3466,10 @@ h2 span,
           background-size: cover;
 }
 
+.card__imgbox[data-toggle="modal"] {
+  cursor: pointer;
+}
+
 .card__imgbox img {
   display: none;
 }
@@ -3504,6 +3547,38 @@ h2 span,
 }
 
 .card-warning-text p {
+  font-size: 1em;
+}
+
+.card-succes-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 6px 15px;
+  background-color: #39b54a;
+  color: #ffffff;
+  font-size: 11px;
+  font-weight: 400;
+}
+
+.card-succes-text p {
+  font-size: 1em;
+}
+
+.card-average-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 6px 15px;
+  background-color: #D99D1B;
+  color: #ffffff;
+  font-size: 11px;
+  font-weight: 400;
+}
+
+.card-average-text p {
   font-size: 1em;
 }
 
@@ -3997,6 +4072,10 @@ h2 span,
 
 .cardFifth-slider .slider-arrow__right {
   right: 7.5px;
+}
+
+.card-number-elem {
+  cursor: pointer;
 }
 
 .card-links-wrap {
@@ -5250,6 +5329,33 @@ h2 span,
   background-color: #f4f5f5;
 }
 
+.profile-info {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0px;
+}
+
+.profile-info tr td {
+  padding-right: 5px;
+  min-width: 235px;
+}
+
+.profile-info tr td:first-child {
+  min-width: auto;
+}
+
+.profile-info tr td:last-child {
+  min-width: auto;
+  width: 100%;
+}
+
+.profile-info tr td hr {
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: #707070;
+  opacity: 0.4;
+}
+
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 500px;
@@ -5437,6 +5543,10 @@ h2 span,
   .card-logo__imgbox:hover {
     border: 2px solid #a1a3a7;
     padding: 14px;
+  }
+
+  .card-number-elem:hover {
+    color: #ffffff;
   }
 
   .card-links a:hover {
