--- a/pug/modals/_modal-content-comments.pug
+++ b/pug/modals/_modal-content-comments.pug
@@ -124,7 +124,7 @@
 							| Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!
 					.comment__link
 						button.comment__reply Ответить
-		#commentFormbox
+		#commentFormbox.comment-form-inn.colapse.show
 			.comment.comment_special
 				.article-autor
 					p.article-autor__left Оставить комментарий:
