--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -20,6 +20,7 @@
 	&-titlebox {
 		float: left;
 		color: $basic-color;
+		margin-bottom: 5px;
 		h1, h2, h3, h4, h5, p, div, span {
 			margin: 0;
 			padding: 0;
@@ -105,6 +106,34 @@
 		}
 		span {
 			color: #bcbdc0;
+		}
+	}
+	&-text {
+		font-size: 16px;
+		color: $basic-color;
+		font-weight: 400;
+		h2 {
+			font-size: 1.5em;
+			font-family: Roboto;
+			font-weight: inherit;
+		}
+		h3 {
+			margin-bottom: 15px;
+			font-size: 1.375em;
+			font-family: Roboto;
+			font-weight: inherit;
+			.small {
+				display: block;
+				font-size: 0.7728em;
+
+			}
+		}
+		p {
+			font-size: 1.0625em;
+			margin-bottom: 5px;
+			.light {
+				color: #bcbdc0;
+			}
 		}
 	}
 	&-filter {
