--- a/sass/general/_form.scss
+++ b/sass/general/_form.scss
@@ -46,6 +46,7 @@
 
 	&__group {
 		margin-bottom: 10px;
+		max-width: 470px;
 	}
 	
 	&__box {
@@ -61,6 +62,9 @@
 		&_flex {
 			display: flex;
 			vertical-align: middle;
+		}
+		&_small {
+			max-width: 270px;
 		}
 	}
 
